--- a/templates/docker-compose-odoo.yml.j2
+++ b/templates/docker-compose-odoo.yml.j2
@@ -12,14 +12,14 @@ services:
       - USER={{VARS_USER}}
       - PASSWORD={{VARS_PASSWORD}}
     volumes:
-      - {{vars_odoo_volume}}:/var/lib/odoo
+      - {{vars_odoo_volumes}}:/var/lib/odoo
       - ./config:/etc/odoo
 
   {{NOM_SERVICE_DB}}:
     image: {{image_db}}
     container_name: {{VARS_HOST}}
     environment:
-      - POSTGRES_DB={{VARS_POSTGRES}}
+      - POSTGRES_DB={{VARS_POSTGRES_DB}}
       - POSTGRES_PASSWORD={{VARS_PASSWORD}}
       - POSTGRES_USER={{VARS_USER}}
       - PGDATA=/var/lib/postgresql/data/pgdata
@@ -27,5 +27,5 @@ services:
       - {{vars_db_volumes}}:/var/lib/postgresql/data/pgdata
 
 volumes:
-  {{VARS_USER}}:
-  {{odoo_db_volume}}:
+  {{vars_db_volumes}}:
+  {{vars_odoo_volumes}}:
